--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 <body onload="init()">
 
     <div id="pokedex">
-        <h1 id="pokemonName">Name</h1>
+        <div id="mainInfo">
+            <h1 id="pokemonName">Name</h1>
+            <h3 id="pokemonID">ID</h3>
+        </div>
+        <div>
+            <button id="pokemonRace" class="button-18">Race</button><button id="pokemonRace" class="button-18">Race</button>
+        </div>
+        <div class="center">
+            <img id="pokemonIMG" alt="Picture of pokemon">
+        </div>
     </div>
-
-    
-    
 </body>
+
 </html>
