--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <h3 id="pokemonID">ID</h3>
         </div>
         <div>
-            <button id="pokemonRace" class="button-18">Race</button><button id="pokemonRace" class="button-18">Race</button>
+            <button id="pokemonRace" class="button-18">Race</button>
         </div>
         <div class="center">
-            <img id="pokemonIMG" alt="Picture of pokemon">
+            <img id="pokemonIMG" src="#" alt="Picture of pokemon">
         </div>
     </div>
 </body>
