--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +26,21 @@
             <button id="pokemonRace" class="button-18">Race</button>
         </div>
         <div class="center">
-            <img id="pokemonIMG" src="#" alt="Picture of pokemon">
+            <img id="pokemonIMG" alt="Picture of pokemon">
+        </div>
+
+        <div class="mainData">
+            <div id="dataLinks">
+                <p><a href="#" class="links">About</a></p>
+                <p><a href="#" class="links">Base Stats</a></p>
+                <p><a href="#" class="links">Evolution</a></p>
+                <p><a href="#" class="links">Moves</a></p>
+            </div>
+
+            
+           
+
+
         </div>
     </div>
 </body>
