--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,21 +33,16 @@
         <div class="center">
             <img id="pokemonIMG" alt="Picture of pokemon">
         </div>
-
         <div class="mainData">
             <div id="dataLinks">
-                <p><a href="#" class="links">About</a></p>
-                <p><a href="#" class="links">Base Stats</a></p>
-                <p><a href="#" class="links">Evolution</a></p>
-                <p><a href="#" class="links">Moves</a></p>
+                <p><a href="#" class="links" onmouseover="renderStats()">About</a></p>
+                <p><a href="#" class="links" onmouseover="renderStats()">Base Stats</a></p>
+                <p><a href="#" class="links" onmouseover="renderStats()">Evolution</a></p>
+                <p><a href="#" class="links" onmouseover="renderStats()">Moves</a></p>
             </div>
-
-            
-           
-
+            <div class="padding" w3-include-html="datasheet.html"></div>
 
         </div>
-    </div>
 </body>
 
 </html>
