--- a/evosheet.html
+++ b/evosheet.html
@@ -1,3 +1,13 @@
-<h5>Evolution Chain</h5>
-<div id="evoIMG"><img src="#" alt=""> <p class="lightblack">Lvl 16</p> <img src="#" alt=""></div>
-<div id="evoIMG"><img src="#" alt=""> <p class="lightblack">Lvl 34</p> <img src="#" alt=""></div>
+<div id="details">
+    <h5>Evolution Chain</h5>
+    <div id="evoIMG">
+        <img alt="Picture of Pokemon baseform" id="baseFormImg" class="evoIMG"> <!-- Hier wird das Bild der Grundform angezeigt -->
+        <p class="lightblack">Lvl 16</p> 
+        <img alt="picture of pokemon first evo" id="firstEvo" class="evoIMG">
+    </div>
+    <div id="evoIMG">
+        <img alt="picture of pokemon first evo" id="firstEvo" class="evoIMG">
+        <p class="lightblack">Lvl 34</p>
+        <img alt="picture of pokemon second evo" id="secondEvo" class="evoIMG">
+    </div>
+</div>
