--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
         <div class="mainData">
             <div id="dataLinks">
-                <p><a class="links" onmouseover="renderStats()">About</a></p>
-                <p><a class="links" onmouseover="renderStats()">Base Stats</a></p>
-                <p><a class="links" onmouseover="renderStats()">Evolution</a></p>
-                <p><a class="links" onmouseover="renderStats()">Moves</a></p>
+                <p><a class="links" onmouseover="renderTemplates()">About</a></p>
+                <p><a class="links" onmouseover="renderTemplates()">Base Stats</a></p>
+                <p><a class="links" onmouseover="renderTemplates()">Evolution</a></p>
+                <p><a class="links" onmouseover="renderTemplates()">Moves</a></p>
             </div>
             <div class="padding" w3-include-html="datasheet.html"></div>
         </div>
